src/renderer/themes.css
/* ... */
.catppuccinFrappe {
  --primary-text-color: #c6d0f5;
  --secondary-text-color: #c6d0f5;
  --tertiary-text-color: #a5adce;
  --title-color: var(--accent-color);
  --bg-color: #303446;
  --favorite-icon-color: #0f0;
  --card-bg-color: #292c3c;
  --secondary-card-bg-color: #303446;
  --scrollbar-color: #414559;
  --scrollbar-color-hover: #515569;
  --side-nav-color: #292c3c;
  --side-nav-hover-color: #232634;
  --side-nav-active-color: #232634;
  --search-bar-color: #414559;
  --logo-icon: url('../../_icons/iconCatppuccinFrappeLightSmall.svg');
  --logo-text: url('../../_icons/textCatppuccinFrappeLightSmall.svg');
}

.everforestDarkHard {
  --primary-text-color: #d3c6aa;
  --secondary-text-color: #d3c6aa;
  --tertiary-text-color: #b3a68a;
  --title-color: var(--accent-color);
  --bg-color: #272e33;
  --favorite-icon-color: #0f0;
  --card-bg-color: #1e2326;
  --secondary-card-bg-color: #272e33;
  --scrollbar-color: #394146;
  --scrollbar-color-hover: #3f4b48;
  --side-nav-color: #1e2326;
  --side-nav-hover-color: #0e1316;
  --side-nav-active-color: #0e1316;
  --search-bar-color: #2e383c;
  --logo-icon: url('../../_icons/iconEverforestLightHardSmall.svg');
  --logo-text: url('../../_icons/textEverforestLightHardSmall.svg');
}

.everforestDarkMedium {
  --primary-text-color: #d3c6aa;
  --secondary-text-color: #d3c6aa;
  --tertiary-text-color: #b3a68a;
  --title-color: var(--accent-color);
  --bg-color: #2d353b;
  --favorite-icon-color: #0f0;
  --card-bg-color: #232a2e;
  --secondary-card-bg-color: #2d353b;
  --scrollbar-color: #3f484e;
  --scrollbar-color-hover: #46534f;
  --side-nav-color: #131a1e;
  --side-nav-hover-color: #131a1e;
  --side-nav-active-color: #131a1e;
  --search-bar-color: #343f44;
  --logo-icon: url('../../_icons/iconEverforestLightMediumSmall.svg');
  --logo-text: url('../../_icons/textEverforestLightMediumSmall.svg');
}

.everforestDarkLow {
  --primary-text-color: #d3c6aa;
  --secondary-text-color: #d3c6aa;
  --tertiary-text-color: #b3a68a;
  --title-color: var(--accent-color);
  --bg-color: #333c43;
  --favorite-icon-color: #0f0;
  --card-bg-color: #293136;
  --secondary-card-bg-color: #333c43;
  --scrollbar-color: #454f56;
  --scrollbar-color-hover: #4d5b56;
  --side-nav-color: #293136;
  --side-nav-hover-color: #192126;
  --side-nav-active-color: #192126;
  --search-bar-color: #3a464c;
  --logo-icon: url('../../_icons/iconEverforestLightLowSmall.svg');
  --logo-text: url('../../_icons/textEverforestLightLowSmall.svg');
}

.everforestLightHard {
  --primary-text-color: #3c4a52;
  --secondary-text-color: #5c6a72;
  --tertiary-text-color: #5c6a72;
  --title-color: var(--accent-color);
  --bg-color: #fffbef;
  --favorite-icon-color: #0f0;
  --card-bg-color: #f2efdf;
  --secondary-card-bg-color: #fffbef;
  --scrollbar-color: #d8d5c5;
  --scrollbar-color-hover: #aeb5a2;
  --side-nav-color: #f2efdf;
  --side-nav-hover-color: #e2dfcf;
  --side-nav-active-color: #e2dfcf;
  --search-bar-color: #f8f5e4;
  --logo-icon: url('../../_icons/iconEverforestDarkHardSmall.svg');
  --logo-text: url('../../_icons/textEverforestDarkHardSmall.svg');
}

.everforestLightMedium {
  --primary-text-color: #3c4a52;
  --secondary-text-color: #5c6a72;
  --tertiary-text-color: #5c6a72;
  --title-color: var(--accent-color);
  --bg-color: #fdf6e3;
  --favorite-icon-color: #0f0;
  --card-bg-color: #efe8d4;
  --secondary-card-bg-color: #fdf6e3;
  --scrollbar-color: #d0ccb7;
  --scrollbar-color-hover: #adb39f;
  --side-nav-color: #efe8d4;
  --side-nav-hover-color: #dfd8c4;
  --side-nav-active-color: #dfd8c4;
  --search-bar-color: #f4f0d9;
  --logo-icon: url('../../_icons/iconEverforestDarkMediumSmall.svg');
  --logo-text: url('../../_icons/textEverforestDarkMediumSmall.svg');
}

.everforestLightLow {
  --primary-text-color: #3c4a52;
  --secondary-text-color: #5c6a72;
  --tertiary-text-color: #5c6a72;
  --title-color: var(--accent-color);
  --bg-color: #f3ead3;
  --favorite-icon-color: #0f0;
  --card-bg-color: #eee8ce;
  --secondary-card-bg-color: #f3ead3;
  --scrollbar-color: #c8c3aa;
  --scrollbar-color-hover: #a9b09b;
  --side-nav-color: #e5dfc5;
  --side-nav-hover-color: #d5cfb5;
  --side-nav-active-color: #d5cfb5;
  --search-bar-color: #eae4ca;
  --logo-icon: url('../../_icons/iconEverforestDarkLowSmall.svg');
  --logo-text: url('../../_icons/textEverforestDarkLowSmall.svg');
}

/*************** PRIMARY THEME COLOR DEFINTIONS ***************/

.mainRed,
.mainPink,
.mainPurple,
.mainDeepPurple,
.mainIndigo,
.mainBlue,
.mainLightBlue,
.mainCyan,
.mainTeal,
.mainGreen {
  --text-with-main-color: #fff;
  --logo-icon-bar-color: url('../../_icons/iconWhiteSmall.svg');
  --logo-text-bar-color: url('../../_icons/textWhiteSmall.svg');
}

/* light primary theme colors */
.mainLightGreen,
.mainLime,
.mainYellow,
.mainAmber,
.mainOrange,
.mainDeepOrange {
  --text-with-main-color: #000;
  --logo-icon-bar-color: url('../../_icons/iconBlackSmall.svg');
  --logo-text-bar-color: url('../../_icons/textBlackSmall.svg');
}

.mainRed {
  --primary-color: #f44336;
  --primary-color-hover: #e53935;
  --primary-color-active: #c62828;
}

.mainPink {
  --primary-color: #e91e63;
  --primary-color-hover: #d81b60;
  --primary-color-active: #ad1457;
}

.mainPurple {
  --primary-color: #9c27b0;
  --primary-color-hover: #8e24aa;
  --primary-color-active: #6a1b9a;
}

.mainDeepPurple {
  --primary-color: #673ab7;
  --primary-color-hover: #5e35b1;
  --primary-color-active: #4527a0;
}

.mainIndigo {
  --primary-color: #3f51b5;
  --primary-color-hover: #3949ab;
  --primary-color-active: #283593;
}

.mainBlue {
  --primary-color: #2196f3;
  --primary-color-hover: #1e88e5;
  --primary-color-active: #1565c0;
}

.mainLightBlue {
  --primary-color: #03a9f4;
  --primary-color-hover: #039be5;
  --primary-color-active: #0277bd;
}

.mainCyan {
  --primary-color: #00bcd4;
  --primary-color-hover: #00acc1;
  --primary-color-active: #00838f;
}
/* ... */

